force-app/main/default/objects/Allocation__c/fields/Allocated_Date__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Date__c</fullName>
    <label>Allocated Date</label>
    <type>Date</type>
</CustomField>