force-app/main/default/objects/Allocation__c/fields/Released_Date__c.field-meta.xml
<CustomField>
    <fullName>Released_Date__c</fullName>
    <label>Released Date</label>
    <type>Date</type>
</CustomField>