force-app/main/default/objects/Allocation__c/fields/Team_Member_No__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_No__c</fullName>
    <label>Team Member No</label>
    <referenceTo>Team_Member__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>