force-app/main/default/objects/Allocation__c/validationRules/Allocated_Date_After_Released_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Allocated_Date_After_Released_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Allocated_Date__c &gt; Released_Date__c</errorConditionFormula>
    <errorDisplayField>Released_Date__c</errorDisplayField>
    <errorMessage>Released Date must be after Allocated Date!!</errorMessage>
</ValidationRule>